--- a/practice.html
+++ b/practice.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>○○食堂</h1>
-      <img src="img/logo.png">
+      <img src="img/logo.png alt="食堂のロゴ画像です">
     </header>
     <hr>
     <!-- end header --->
